Fixed typos in back end code. Started to work on front end

--- a/inventory/styles/main.css
+++ b/inventory/styles/main.css
@@ -84,7 +84,7 @@
     text-decoration: underline;
 }
 
-#main-container{
+#right-column{
     border-style: solid;
     border-width: 1px;
     border-color: gray;
