--- a/inventory/styles/main.css
+++ b/inventory/styles/main.css
@@ -34,7 +34,7 @@
 }
 .column{
     float: left;
-    display: block;
+    /* display: block; */
     overflow: auto;
     background-color: lightgray;
     z-index: 999999;
@@ -42,13 +42,20 @@
 }
 
 .left{
-    width: 33%;
-    margin-left: 10px;
+    width: 20%;
+    margin-left: 6px; 
+    /* margin left 10 */
+}
+
+.mid{
+    width: 45%;
+    background-color: white;
 }
 
 .right{
-    width: 63%;
-    margin-right: 10px;
+    width: 30%;
+    margin-right: 6px;
+    /* margin right 10 */
 }
 
 #search-container{
@@ -82,6 +89,13 @@
     color: inherit;
     line-height: 20px;
     text-decoration: underline;
+}
+
+#mid-column{
+    border-style: solid;
+    border-width: 1px;
+    border-color: gray;
+    padding: 10px;
 }
 
 #right-column{
@@ -132,4 +146,9 @@ textarea{
 #content-pane{
     z-index: 9999999;
     min-height: 100%;
+}
+
+table th{
+    font-size: 15px;
+
 }
