--- a/inventory/styles/main.css
+++ b/inventory/styles/main.css
@@ -173,3 +173,9 @@ table th{
     border: 1px gray solid;
     padding-left: 6px;
 }
+
+@media screen and (max-width: 1250px) {
+    .column {
+      width: 100%;
+    }
+  }
