--- a/inventory/styles/main.css
+++ b/inventory/styles/main.css
@@ -91,6 +91,7 @@
     color: inherit;
     line-height: 20px;
     text-decoration: underline;
+    cursor: pointer;
 }
 
 #mid-column{
@@ -123,8 +124,9 @@ input{
     margin: 5px;
 }
 
-textarea{
-    
+.product-table-row:hover{
+    cursor: pointer;
+    color: gray;
 }
 
 #footer{
@@ -146,6 +148,7 @@ textarea{
     padding-left: 5px;
     color: white;
 }
+
 
 #content-pane{
     z-index: 9999999;
