--- a/inventory/styles/main.css
+++ b/inventory/styles/main.css
@@ -34,17 +34,13 @@
 }
 .column{
     float: left;
-    /* display: block; */
-    /* overflow: visible; */
     background-color: lightgray;
-    /* z-index: 999999; */
     font-family: 'Open Sans',Helvetica,Arial,Lucida,sans-serif;
 }
 
 .left{
     width: 20%;
     margin-left: 6px; 
-    /* margin left 10 */
 }
 
 .mid{
@@ -143,13 +139,12 @@ input{
 }
 
 #footer{
-    display: inline-block;
     border-style: solid;
     border-width: 1px;
     border-color: gray;
     border-radius: 5px;
+    display: inline-block;
     width: 98%;
-    height: 20px;
     background-color: #1881c5;
     position: relative;
     bottom: 0;
@@ -195,6 +190,19 @@ table th{
 
 @media screen and (max-width: 1250px) {
     .column {
-      width: 100%;
+        display: inline-block;
+        float: none;
+    }
+
+    .left{
+        width: 98%;
+    }
+
+    .mid{
+        width: 98%;
+    }
+
+    .right{
+        width: 98%;
     }
   }
