--- a/inventory/styles/main.css
+++ b/inventory/styles/main.css
@@ -112,6 +112,11 @@
     padding: 10px;
 }
 
+.mid-button-container{
+    margin: 5px 0 0 0;
+    text-align: right;
+}
+
 .info{
     font-size: 15px;
     line-height: 30px;
