--- a/inventory/styles/main.css
+++ b/inventory/styles/main.css
@@ -4,6 +4,9 @@ input{
     padding: 5px;
 }
 
+button{
+    margin-left: 5px;
+}
 
 table th{
     font-size: 15px;
@@ -28,8 +31,11 @@ table th{
 
 .right{
     margin-right: 25px;
+    overflow-y: auto;
     position: -webkit-sticky; /*Safari*/
     position: sticky;
+    max-height: 850px;
+    scrollbar-width: 15px;
     top: 5px;
     width: 35%;
 }
@@ -47,11 +53,13 @@ table th{
     font-size: 15px;
     height: 80%;
     line-height: 30px;
-    overflow-y: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .info::-webkit-scrollbar{
-    display: none;
+    /* display: none; */
+    scrollbar-width: 10px;
 }
 
 .info input{
@@ -107,7 +115,12 @@ table th{
     border-radius: 5px;
     border-style: solid;
     border-width: 1px;
+    line-height: 2;
     padding: 10px;
+}
+
+#consoleSelectBox{
+    margin-left: 5px;
 }
 
 #list-container{
