--- a/inventory/styles/main.css
+++ b/inventory/styles/main.css
@@ -95,6 +95,7 @@ table th{
     border-radius: 5px;
     border-style: solid;
     border-width: 1px;
+    font-family: 'Hind Siliguri', sans-serif;
     height: 100px;
     margin: 10px;
     padding-bottom: 10px;
@@ -103,11 +104,24 @@ table th{
 
 #header p{
     color:white;
-    font-family: 'Hind Siliguri', sans-serif;
     font-size: 2em;
     padding: 50px 20px 10px;
     position: absolute;
-    right: 20px;
+    right: 2%;
+}
+
+#header .logout{
+    color:white;
+    position: absolute;
+    right: 2%;
+    text-decoration: none;
+    top: 25px;
+    z-index: 1;
+}
+
+#header .logout:hover{
+    color:lightgray;
+    
 }
 
 #search-container{
