Worked on purchase modules. Near complete. Need to add validation, but module is functional

--- a/inventory/styles/main.css
+++ b/inventory/styles/main.css
@@ -73,6 +73,11 @@ table th{
     color: gray;
 }
 
+.transaction-final {
+    margin: 25px auto 10px; 
+    width:98%;
+}
+
 /*************************************ID SELECTORS*****************************************/
 #header>*{
     /* Select level 1 children */
