Worked on manager login. Trade in module accounts for store or manager user and populates trade ins accordingly

--- a/inventory/styles/main.css
+++ b/inventory/styles/main.css
@@ -89,6 +89,12 @@ table th .fas{
     width:98%;
 }
 
+.refresh {
+    text-align: right;
+    margin-top: 15px;
+    width: 100%;
+}
+
 /*************************************ID SELECTORS*****************************************/
 #header>*{
     /* Select level 1 children */
